# FileManager

./: .gitignore  .secrets.baseline  README.md  file_manager.py  pyproject.toml  test_file_manager.py
.github/workflows/: tests.yml
